--- a/index.qmd
+++ b/index.qmd
@@ -1,15 +1,15 @@
 # Personal Introduction {.unnumbered}
 
-Hi, this is Qiyue Chen, a student of MSc Urban Spatial Science. I come from Hainan Province, China, which is a beautiful island! I finished my undergraduate degree at Xi'an Jiaotong-Liverpool University and studied Urban Planning and Design. In my past academic and internship experiences, I have developed a strong interest in urban sustainable development, particularly in low-carbon strategies, including land use, urban form and transport systems.
+Hi, this is Qiyue Chen, a student of MSc Urban Spatial Science, CASA,UCL. I come from Hainan Province, China, which is a beautiful island! I finished my undergraduate degree at Xi'an Jiaotong-Liverpool University and studied Urban Planning and Design. In my past academic and internship experiences, I have developed a strong interest in urban sustainable development, particularly in low-carbon strategies, including land use, urban form and transport systems.
 
 During my undergraduate studies, I mainly learned the use of Geographic Information Systems (GIS) and gained some knowledge of Geographical Science. However, when exploring urban issues, I discovered that remote sensing data has broader application prospects.
 
-In the undergraduate course projects on urban analysis, I used relatively inefficient methods to analyse urban characteristics, relying on manual methods for data processing, classification and visualisation. This approach may have affected data precision and constrained the study scope to a smaller scale.
+In the undergraduate course projects related to urban analysis, I used relatively inefficient methods to analyse urban characteristics, relying on manual methods for data processing, classification and visualisation. This approach may have affected data precision and constrained the study scope to a smaller scale.
 
-However, through the study of remote sensing in this course, I will be able to combine machine learning methods to solve the limitations I encountered in my undergraduate studies, I will combine them with machine learning methods to address the limitations I encountered in my undergraduate studies. This will also open up more possibilities for my future learning and career development.
+However, through the study of remote sensing in this course, I will be able to combine machine learning methods to solve the limitations I encountered in my undergraduate studies. This will also open up more possibilities for my future learning and career development.
 
 Studying urban planning has exposed me to diverse urban histories, sparking a keen interest in tourism and city walks. From delving into masterplans on a theoretical level to experiencing cities firsthand and feeling their unique social and cultural identities, I have developed a profound fascination with the discipline. I look forward to exploring the diversity and development potential of cities further through quantitative and spatial analysis.
 
-Thanks for your reading!:)
+Thanks for your reading! :)
 
-![Figure 1 The urban fabric shot in Barcelona ](source/week01/index.jpg)
+![Figure 1 The urban fabric shot in Barcelona](source/week01/index.jpg)
